--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,52 @@
+# Set theme
+remote_theme: daviddarnes/alembic
+
+# File excludes
+exclude:
+- README.md
+- Gemfile
+- Gemfile.lock
+
+# Set plugins
+plugins:
+- jekyll-sitemap
+- jekyll-mentions
+- jekyll-paginate
+- jekyll-seo-tag
+- jekyll-redirect-from
+- jekyll-default-layout
+- jekyll-feed
+- jemoji
+- jekyll-remote-theme
+
 # Site settings
-title: O Grande Livro dos Erros Makers
-email: edu@edulopes.com
-description: > # this means to ignore newlines until "baseurl:"
-baseurl: "/ograndelivro/" # the subpath of your site, e.g. /blog/
-url: "http://www.edulopes.com" # the base hostname & protocol for your site
+url: 'https://mydomain.com'
+baseurl: ''
+title: 'My website'
+description: 'This is my new website'
+permalink: pretty
+logo: "https://www.gravatar.com/avatar/6c0377abcf4da91cdd35dea4554b2a4c?s=52"
 
-twitter_username:
-github_username:
+# Pagination
+paginate: 5
+paginate_path: blog/page:num
 
-# Build settings
-markdown: kramdown
+# Header nav
+navigation_header:
+  Home: /
+  About: /about/
+  Blog: /blog/
+
+# Footer nav
+navigation_footer:
+  Back to top: "#top"
+
+# Collections
+collections:
+  posts:
+    title: Posts
+    output: true
+    description: "My thoughts and ideas"
+    feature_text: |
+      Welcome to my blog
+    feature_image: "https://picsum.photos/2560/600?image=866"
